--- a/Resources/Prototypes/_RMC14/Entities/Structures/Wallmounts/surveillance_camera.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Wallmounts/surveillance_camera.yml
@@ -24,6 +24,7 @@
   - type: Sprite
     drawdepth: WallMountedItems
     sprite: _RMC14/Structures/Wallmounts/camera.rsi
+    offset: 0, 0.5
     layers:
     - map: [ "enum.SurveillanceCameraVisualsKey.Layer" ]
       state: camera
