fix: apc sprites

--- a/Resources/Prototypes/_MC/Entities/Structures/Power/apc.yml
+++ b/Resources/Prototypes/_MC/Entities/Structures/Power/apc.yml
@@ -16,18 +16,18 @@
     - state: display-charging
       shader: unshaded
       map: [ "enum.ApcVisualLayers.ChargeState" ]
-#    - state: apcox-0
-#      shader: unshaded
-#      map: [ "enum.ApcVisualLayers.InterfaceLock" ]
-#    - state: apcox-1
-#      shader: unshaded
-#      map: [ "enum.ApcVisualLayers.PanelLock" ]
-#    - state: apco0-2
-#      shader: unshaded
-#      map: [ "enum.ApcVisualLayers.Equipment" ]
-#    - state: apco1-2
-#      shader: unshaded
-#      map: [ "enum.ApcVisualLayers.Lighting" ]
-#    - state: apco2-2
-#      shader: unshaded
-#      map: [ "enum.ApcVisualLayers.Environment" ]
+    - state: apcox-0
+      shader: unshaded
+      map: [ "enum.ApcVisualLayers.InterfaceLock" ]
+    - state: apcox-1
+      shader: unshaded
+      map: [ "enum.ApcVisualLayers.PanelLock" ]
+    - state: apco0-2
+      shader: unshaded
+      map: [ "enum.ApcVisualLayers.Equipment" ]
+    - state: apco1-2
+      shader: unshaded
+      map: [ "enum.ApcVisualLayers.Lighting" ]
+    - state: apco2-2
+      shader: unshaded
+      map: [ "enum.ApcVisualLayers.Environment" ]
