wip: update areas

--- a/Resources/Prototypes/_MC/Entities/Areas/Ship/medbay.yml
+++ b/Resources/Prototypes/_MC/Entities/Areas/Ship/medbay.yml
@@ -1,25 +1,5 @@
 - type: entity
-  parent: RMCAreaAlmayerSquads
-  id: MCAreaShipRequisitions
-  name: Requisitions
-  components:
-  - type: Sprite
-    state: req
-  - type: Area
-    zLevel: 2
-
-- type: entity
-  parent: RMCAreaAlmayerSquads
-  id: MCAreaShipCommonSquadPreparation
-  name: Common Squad Preparation
-  components:
-  - type: Sprite
-    state: req
-  - type: Area
-    zLevel: 2
-
-- type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalLowerMedbay
   name: Medical Lower Medbay
   components:
@@ -29,28 +9,28 @@
     zLevel: 2
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalUpperMedbay
   name: Medical Upper Medbay
   components:
   - type: Sprite
     state: medical
   - type: Area
-    zLevel: 1
+    zLevel: 2
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalMorgue
   name: Morgue
   components:
   - type: Sprite
     state: operating
   - type: Area
-    zLevel: 1
+    zLevel: 2
   - type: IntelRecoverCorpsesArea
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalOperatingRoomOne
   name: Medical Operating Room 1
   components:
@@ -60,7 +40,7 @@
     zLevel: 2
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalOperatingRoomTwo
   name: Medical Operating Room 2
   components:
@@ -70,7 +50,7 @@
     zLevel: 2
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id: MCAreaShipMedicalMedicalScience
   name: Medical Research laboratories
   components:
@@ -81,41 +61,11 @@
     retrieveItemObjective: true
 
 - type: entity
-  parent: RMCAreaAlmayerMedical
+  parent: MCAreaShip
   id:  MCAreaShipMedicalChemistry
   name: Medical Chemical laboratory
   components:
   - type: Sprite
     state: chemistry
-  - type: Area
-    zLevel: 2
-
-- type: entity
-  parent: RMCAreaAlmayerMaint
-  id: MCAreaShipMaintLower
-  name: Hull lower
-  components:
-  - type: Sprite
-    state: lowerhull
-  - type: Area
-    zLevel: 2
-
-- type: entity
-  parent: RMCAreaAlmayerLiving
-  id: MCAreaShipBoxingRing
-  name: Boxing Ring
-  components:
-  - type: Sprite
-    state: livingspace
-  - type: Area
-    zLevel: 2
-
-- type: entity
-  parent: RMCAreaAlmayerShipboard
-  id: MCAreaShipFiringRange
-  name: Firing Range
-  components:
-  - type: Sprite
-    state: firingrange
   - type: Area
     zLevel: 2
