--- a/Resources/Prototypes/Species/moth.yml
+++ b/Resources/Prototypes/Species/moth.yml
@@ -1,7 +1,7 @@
 - type: species
   id: Moth
   name: species-name-moth
-  roundStart: false
+  roundStart: true
   prototype: CMMobMoth
   sprites: MobMothSprites
   defaultSkinTone: "#ffda93"
