--- a/Resources/Prototypes/_RMC14/Species/avali.yml
+++ b/Resources/Prototypes/_RMC14/Species/avali.yml
@@ -3,7 +3,7 @@
 - type: species
   id: Avali
   name: species-name-avali
-  roundStart: false
+  roundStart: true
   prototype: CMMobAvali
   sprites: MobAvaliSprites
   markingLimits: MobAvaliMarkingLimits
