--- a/Resources/Prototypes/_RMC14/Species/felinid.yml
+++ b/Resources/Prototypes/_RMC14/Species/felinid.yml
@@ -3,7 +3,7 @@
 - type: species
   id: Felinid
   name: species-name-felinid
-  roundStart: false
+  roundStart: true
   prototype: CMMobFelinid
   sprites: MobFelinidSprites
   markingLimits: MobFelinidMarkingLimits
