--- a/Resources/Prototypes/_RMC14/Species/skrell.yml
+++ b/Resources/Prototypes/_RMC14/Species/skrell.yml
@@ -3,7 +3,7 @@
 - type: species
   id: Skrell
   name: species-name-skrell
-  roundStart: false
+  roundStart: true
   prototype: RMCMobSkrell
   sprites: MobSkrellSprites
   defaultSkinTone: "#8cd7a3"
