--- a/Resources/Prototypes/_RMC14/Species/vulpkanin.yml
+++ b/Resources/Prototypes/_RMC14/Species/vulpkanin.yml
@@ -3,7 +3,7 @@
 - type: species
   id: Vulpkanin
   name: species-name-vulpkanin
-  roundStart: false
+  roundStart: true
   prototype: RMCMobVulpkanin
   sprites: MobVulpkaninSprites
   defaultSkinTone: "#985629"
